# SSGD_Problem

./: .gitignore  CMakeLists.txt  batch.cpp  bunny.cpp  check_bob.cpp  cmakelists_backup.txt  esp2.cpp  fcmatch.py  heat_geodesic.cpp  main.cpp  main_backup.cpp  main_mio.cpp  mesh_analysis.cpp  prova.cpp  save_dist.cpp  smape.cpp  smape_batch.cpp  solving_ssgd.cpp  solving_ssgd.h  vtp_sampling.cpp  write_gt_csv.cpp
SSGD_methods/: CMakeLists.txt  geo_method.h
SSGD_methods/Edge/: edge.cpp
SSGD_methods/ExtendedSolver/: extended_solver.h  geodesic_solver.cpp  geodesic_solver.h  shortest_path.cpp  shortest_path.h
SSGD_methods/GeoTangle/: GeoTangle.cpp  GeoTangle_original.cpp  geo.cpp
SSGD_methods/Graph-based_methods/: CMakeLists.txt  extended_solver.cpp  geodesic_solver.cpp  geodesic_solver.h  shortest_path.cpp  shortest_path.h
SSGD_methods/Trettner/: CMakeLists.txt  trettner.cpp  trettner.h
SSGD_methods/VTP/: CMakeLists.txt  diff_geo.cpp  diff_geo.h  geodesic_mesh.h  vtp_wrapper.cpp  vtp_wrapper.h
SSGD_methods/heat/: CMakeLists.txt  gc_wrapper.cpp  gc_wrapper.h
build_xcode/: cmake_install.cmake
build_xcode/CMakeScripts/: ReRunCMake.make
build_xcode/Release/: SSGD_dist
build_xcode/SSGD_dist.xcodeproj/: project.pbxproj
build_xcode/SSGD_dist.xcodeproj/xcshareddata/xcschemes/: SSGD_dist.xcscheme
build_xcode/SSGD_methods/: cmake_install.cmake
build_xcode/SSGD_methods/Graph-based_methods/: cmake_install.cmake
build_xcode/SSGD_methods/Trettner/: cmake_install.cmake
build_xcode/SSGD_methods/VTP/: cmake_install.cmake
build_xcode/SSGD_methods/heat/: cmake_install.cmake
build_xcode/STB/: cmake_install.cmake
build_xcode/imgui/: cmake_install.cmake
build_xcode/imgui/glfw/: cmake_install.cmake
build_xcode/imgui/glfw/CMakeScripts/: ReRunCMake.make
build_xcode/imgui/glfw/GLFW.xcodeproj/: project.pbxproj
build_xcode/imgui/glfw/src/: cmake_install.cmake
build_xcode/libs/: cmake_install.cmake
build_xcode/libs/geometry-central/: cmake_install.cmake
build_xcode/libs/geometry-central/CMakeScripts/: ReRunCMake.make
build_xcode/libs/geometry-central/geometry-central.xcodeproj/: project.pbxproj
build_xcode/libs/geometry-central/src/: cmake_install.cmake
data/normalized_for_trettner/: soccerball_NORMALIZED.mtu
libs/: CMakeLists.txt
libs/geodesic-source-propagation-supplemental/: CMakeLists.txt  main.cc  main_original.cc
pymeshlab/: bunny.ply  bunny_coarse.ply  bunny_ok.ply  cube.ply  fcmatch.py  n_faces.py  obj_to_ply.py  ply_to_obj.py  repair_mesh.py  run_mesh_script.py
pymeshlab/Esperimento_1/: analysis.ipynb  clear_datasets.py  loop_subdiv.py  loop_subdivision.py  prova.py  simplify_mesh.py  testutils.py  trim_spot_6.py
pymeshlab/Esperimento_1/data/SMAPE_500f/: double.py
pymeshlab/Esperimento_1/data/SMAPE_RESULTS_BLUB/: double.py  smape.py
pymeshlab/Esperimento_1/data/SMAPE_RESULTS_BOB/: double.py
pymeshlab/Esperimento_1/data/SMAPE_RESULTS_SPOT/: double.py
pymeshlab/Esperimento_1/data/csv_vtp_gt/: smape_errors_0_3_v1.csv  smape_errors_0_4_v1.csv  smape_errors_0_4_v1301.csv  smape_errors_0_4_v1951.csv  smape_errors_0_4_v2601.csv  smape_errors_0_4_v651.csv  smape_errors_1.csv  smape_errors_1301.csv  smape_errors_2601.csv  smape_errors_651.csv
pymeshlab/Esperimento_1/data/gt/: batch.cpp
pymeshlab/Esperimento_1_Distribuzioni/: distribuzioni.py  distribuzioni_CORRECTION.py  distribuzioni_thai.py  prova.py
pymeshlab/Esperimento_1_Distribuzioni/RIFACCIO_PER_TESI/BLUB/: distribuzioni_rifatte_BLUB.py
pymeshlab/Esperimento_1_Distribuzioni/RIFACCIO_PER_TESI/BUNNY/: distribuzioni_rifatte_BUNNY.py
pymeshlab/Esperimento_1_Distribuzioni/RIFACCIO_PER_TESI/DRAGON/: distribuzioni_rifatte_DRAGON
pymeshlab/Esperimento_1_Distribuzioni/RIFACCIO_PER_TESI/THAI/: distribuzioni_rifatte_THAI.py
pymeshlab/Esperimento_1_Drago/Dragon_with_decimation/: decimator_prova.py  iterative_mesh_decimator.py  order_vertices.py
pymeshlab/Esperimento_1_Drago/Dragon_with_decimation/SMAPE/: double.py  smape.py
pymeshlab/Esperimento_1_Drago/Dragon_with_decimation/avg_edge_length/: plot_error_vs_avgedgelength.py
pymeshlab/Esperimento_1_Media/: mean_plot.py
pymeshlab/Esperimento_1_Thai/: order_vertices.py
pymeshlab/Esperimento_1_Thai/SMAPE/: double.py
pymeshlab/Esperimento_2/data/: evaluate_complexity.py  prova.py
pymeshlab/Esperimento_2/distances/: time.py
pymeshlab/Esperimento_2/mechanical/DISTANCES_OK/: time.py
pymeshlab/Esperimento_2/mechanical/SMAPE/: heatmap.py  smape.py
pymeshlab/Esperimento_2/mechanical/distances/: time.py
pymeshlab/Esperimento_2/mechanical/smape_vs_times_plot/: TIMES_and_SMAPE_CSV.py  plot_times_and_smape.py
pymeshlab/Esperimento_2/mechanical/time_plot/: time_plot.py
pymeshlab/Esperimento_2/organic/DISTANCES_OK/: time.py
pymeshlab/Esperimento_2/organic/SMAPE/: box_plot.py  heatmap.py  smape.py
pymeshlab/Esperimento_2/organic/distances/: time.py
pymeshlab/Esperimento_2/organic/smape_vs_times_plot/: TIMES_and_SMAPE_CSV.py  plot_times_and_smape.py
pymeshlab/Esperimento_2/organic/time_plot/: time_plot.py
pymeshlab/Esperimento_2/time_plot/: time_plot.py
pymeshlab/Esperimento_Distribuzioni/: distribuzioni.py
pymeshlab/Esperimento_Distribuzioni/data/distances_asian_dragon/: M0_reordered_Heat_16.txt  M1_reordered_Heat_16.txt  M1_reordered_VTP_16.txt  M2_reordered_Geotangle_16.txt  M3_reordered_Fast Marching_16.txt  M3_reordered_Trettner_16.txt  M4_reordered_Edge_16.txt  M5_reordered_Trettner_16.txt
pymeshlab/Esperimento_Distribuzioni/data/distances_bob_500f/: bob_500f_0_Edge_100.txt  bob_500f_0_Extended_100.txt  (+44 more)
pymeshlab/Esperimento_Drago/: iterative_mesh_decimator.py  order_vertices.py
pymeshlab/Esperimento_Drago/DISTANCES/: M1_reordered_Fast Marching_16.txt  M1_reordered_Trettner_16.txt  M2_reordered_VTP_16.txt  M3_reordered_Edge_16.txt  M3_reordered_Geotangle_16.txt  M4_reordered_Geotangle_16.txt  M5_reordered_Edge_16.txt
pymeshlab/Esperimento_K_Steiner/SMAPE/: smape_k.py  smape_n.py
pymeshlab/Esperimento_K_Steiner/plot/: linechart_K.py  linechart_N.py  linechart_time_K.py  linechart_time_N.py
(+118 files in other folders)
